# mcp-security-gateway

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 202606260001_initial_domain_database.py  202606280001_add_tool_call_arguments_payload.py
docs/: api-examples.md  architecture.md  demo.md  development.md  roadmap.md  security-model.md  threat-model.md
examples/: demo_seed.py
examples/mcp_servers/: calculator_server.py
src/mcp_security_gateway/: __init__.py  main.py  settings.py
src/mcp_security_gateway/api/: __init__.py  dependencies.py  errors.py  schemas.py
src/mcp_security_gateway/api/routes/: __init__.py  admin_agents.py  admin_approvals.py  admin_tools.py  agent_self.py  health.py  tool_calls.py
src/mcp_security_gateway/application/ports/: __init__.py  mcp_client.py  repositories.py
src/mcp_security_gateway/application/services/: __init__.py  agent_service.py  approval_service.py  audit_service.py  errors.py  policy_engine.py  (+2 more)
src/mcp_security_gateway/domain/: __init__.py  enums.py  exceptions.py  models.py  policy.py
tests/: conftest.py
tests/api/: test_agents.py  test_health.py  test_tool_calls.py
tests/e2e/: test_real_mcp_stdio.py
tests/fakes/: __init__.py  mcp_client.py
tests/integration/: test_repositories.py
tests/unit/: test_agent_service.py  test_api_keys.py  test_domain.py  test_mcp_stdio_client.py  test_policy_engine.py  test_settings.py  test_tool_call_service.py  test_tool_registry_service.py
(+8 files in other folders)
